# cmj_template_automation

./: README.md
cmj_template_clean/: CUSTOMER_GUIDE.md  LESSONS_LEARNED.md  MIGRATION_GUIDE.md  PRE_ENGAGEMENT_CHECKLIST.md  PRE_ENGAGEMENT_CHECKLIST_DETAILED.md  QUICK_REFERENCE.md  README.md  all_objects.groovy  pyproject.toml  setup.py
cmj_template_clean/config/: field_type_mapping.csv
cmj_template_clean/docs/: ATLASSIAN_COMMUNITY_ARTICLE.md  CMJ_Migration_Article_Final.docx  CMJ_Migration_Toolkit_Article.docx  COMPLETE_WORKFLOW.md
cmj_template_clean/scripts/: archive_project.py  check_issuelinktype_usage.groovy  check_issuetype_usage.groovy  convert_data_to_xlsx.py  create_cmj_templates.py  export_all_target_data.groovy  filter_for_cmj_template.py  generate_cleanup_report_v2.py  generate_groovy_cleanup.py  process_customer_mapping.py  run_migration.py  validate_cleanup_results.py  validate_customer_review.py
cmj_template_clean/tests/: test_process_customer_mapping.py
