[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmj-migration-tools"
version = "3.1.0"
description = "Toolkit for CMJ (Configuration Manager for Jira) multi-project migrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "CMJ Migration Team"}
]
keywords = ["jira", "cmj", "migration", "atlassian", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
cmj-migrate = "run_migration:main"

[project.urls]
Homepage = "https://github.com/your-org/cmj-migration-tools"
Documentation = "https://github.com/your-org/cmj-migration-tools#readme"
Issues = "https://github.com/your-org/cmj-migration-tools/issues"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]